fix: Page content overflowing view size

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 section{
-    min-width: 98vw;
+    
     min-height: 100vh;
 }
 a{
@@ -62,6 +62,7 @@ ul{
 .welcome{
     width: 300px;
     flex-grow: 2;
+    flex-shrink: 1;
     display: flex;
     flex-direction: column;
     gap: 10px; 
@@ -133,6 +134,9 @@ ul{
     justify-content: center;
     align-items: center;
 }
+#history .section-title{
+    text-align: center;
+}
 
 .call{
     display: flex;
@@ -154,6 +158,7 @@ ul{
     align-self: flex-end;
     margin-top: auto;
     gap: 20px;
+    flex-wrap: wrap;
 }
 .call .call-button button{ 
     border: 2px solid #F9FAF8;
